# i-helper

./: README.md  build.sh  docker-compose.yml  start-dev.sh
i-helper-backend/: Cargo.toml  Dockerfile.dev
i-helper-backend/src/: main.rs
i-helper-backend/src/handlers/: chat.rs
i-helper-backend/src/routes/: chat.rs  mod.rs
i-helper-frontend/: Dockerfile.dev  Dockerfile.electron  package.json  tsconfig.electron.json
i-helper-frontend/public/: index.html
i-helper-frontend/src/features/chat/: ChatInterface.tsx
i-helper-frontend/src/features/dashboard/: Dashboard.tsx
i-helper-frontend/src/main/: main.ts  preload.ts
i-helper-frontend/src/renderer/: App.tsx
i-helper-frontend/src/renderer/features/chat/: ChatInterface.tsx
