[package]
name = "i-helper-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true